<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/todoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idText"
                android:textColor="#367D97"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/todoText"
                android:textSize="15sp"
                android:textStyle="normal|bold"
                app:layout_constraintStart_toEndOf="@+id/todoId"
                app:layout_constraintTop_toTopOf="@+id/todoId" />

            <TextView
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadlineText"
                android:textColor="#367D97"
                android:textSize="11sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/todo"
                app:layout_constraintTop_toBottomOf="@+id/todo" />

            <Button
                android:id="@+id/removeTodoButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/remove_ic"
                android:contentDescription="@string/emptyString"
                app:backgroundTint="#C75450"
                app:drawableRight="@drawable/remove_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>